@@ -1,5 +1,5 @@
 /*
- * Copyright (c) 1998, 2013, Oracle and/or its affiliates. All rights reserved.
+ * Copyright (c) 1998, 2020, Oracle and/or its affiliates. All rights reserved.
  * DO NOT ALTER OR REMOVE COPYRIGHT NOTICES OR THIS FILE HEADER.
  *
  * This code is free software; you can redistribute it and/or modify it
@@ -92,8 +92,8 @@ class DTDInputStream extends FilterReader implements DTDConstants {
      * Push an entire input stream
      */
     void push(Reader in) throws IOException {
-        stack.push(new Integer(ln));
-        stack.push(new Integer(ch));
+        stack.push(Integer.valueOf(ln));
+        stack.push(Integer.valueOf(ch));
         stack.push(this.in);
         this.in = in;
         ch = in.read();
