@@ -25,8 +25,8 @@
  * @test
  * @bug 8223780
  * @summary This exercises String#translateEscapes patterns and limits.
- * @compile --enable-preview -source ${jdk.version} TranslateEscapes.java
- * @run main/othervm --enable-preview TranslateEscapes
+ * @compile TranslateEscapes.java
+ * @run main TranslateEscapes
  */
 
 public class TranslateEscapes {
